--- a/iam-service/Dockerfile.dev
+++ b/iam-service/Dockerfile.dev
@@ -4,5 +4,8 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
+RUN npm install -g @nestjs/cli
 
 EXPOSE 3001
+
+CMD ["npm", "run", "start:dev"]
