--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -3,14 +3,14 @@ server {
     server_name localhost;
 
     location /api/iam/ {
-        proxy_pass http://iam-service:3001/;
+        proxy_pass http://host.docker.internal:3001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /api/courses/ {
-        proxy_pass http://course-service:3002/;
+        proxy_pass http://host.docker.internal:3002/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
