--- a/media-service/.prettierrc
+++ b/media-service/.prettierrc
@@ -1,4 +1,11 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+    "arrowParens": "always",
+    "semi": true,
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "endOfLine": "auto",
+    "useTabs": false,
+    "singleQuote": true,    
+    "printWidth": 120,
+    "jsxSingleQuote": true
 }
