--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -9,10 +9,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /api/courses/ {
+    location /api/media/ {
         proxy_pass http://host.docker.internal:3002/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
